test sources now are reached via classloader